--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!-- <app-produt></app-produt> -->
 <!-- <h1>This Is Heading1</h1> -->
-<app-emp-details></app-emp-details>
+<!-- <app-emp-details></app-emp-details> -->
 <!-- <app-pipes></app-pipes> -->
+<!-- <app-studentlist></app-studentlist>
+<app-student-details></app-student-details> -->
+<!-- <app-root></app-root> -->
+<app-header [deviceXs]="deviceXs"></app-header>
+<!-- <button mat-button>Hello world!</button> -->
